project gallery: added tags to all icons and fixed positioning

--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -147,7 +147,7 @@
                     </div>
                     <div class = "col-6 col-sm-4">
                         <div class="dot blue">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">meh... <br> — gudetama</div>
                             <div class = "img-container">
                             <img alt="jasmine" src="../assets/img//members/jasmine.png" class = "member"/>
                             </div>
@@ -281,7 +281,7 @@
                     </div>
                     <div class = "col-4 col-sm-3">
                         <div class="dot red">
-                            <div class = "quote">Trying to make active choices, not passive choices.</div>
+                            <div class = "quote">Click <a href="https://www.linkedin.com/in/irisghou/" target="_blank">here</a> for a random ideas generator.</div>
                             <div class = "img-container">
                             <img alt="iris" src="../assets/img//members/iris.png" class = "member"/>
                             </div>
@@ -291,7 +291,7 @@
                     </div>
                     <div class = "col-4 col-sm-3">
                         <div class="dot blue">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">For what purpose?</div>
                             <div class = "img-container">
                             <img alt="jake" src="../assets/img//members/jake.png" class = "member"/>
                             </div>
@@ -313,7 +313,7 @@
                     </div>
                     <div class = "col-4 col-sm-3">
                         <div class="dot green">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">Every time you cut a corner you leave yourself with two more.</div>
                             <div class = "img-container">
                             <img alt="joe" src="../assets/img//members/joe.png" class = "member"/>
                             </div>
@@ -323,7 +323,7 @@
                     </div>
                     <div class = "col-4 col-sm-3">
                         <div class="dot yellow">
-                            <div class = "quote">“The only thing predictable about life is its unpredictability.” – Ratatouille</div>
+                            <div class = "quote">“The only thing predictable about<br>life is its unpredictability.” <br> – Ratatouille</div>
                             <div class = "img-container">
                             <img alt="katrina" src="../assets/img//members/katrina.png" class = "member"/>
                             </div>
@@ -355,7 +355,7 @@
                     </div>
                     <div class = "col-4 col-sm-3">
                         <div class="dot yellow">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">Mr. Worldwide </div>
                             <div class = "img-container">
                             <img alt="malena" src="../assets/img//members/malena.png" class = "member"/>
                             </div>
@@ -375,7 +375,7 @@
                     </div>
                     <div class = "col-4 col-sm-3">
                         <div class="dot blue">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">All you need is <br> twenty seconds of insane courage, and something great will come of it.</div>
                             <div class = "img-container">
                             <img alt="natalie d" src="../assets/img//members/natd.png" class = "member"/>
                             </div>
@@ -429,7 +429,7 @@
                 <div class = "row"> -->
                     <div class = "col-4 col-sm-3">
                         <div class="dot red">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">will make a Spotify playlist for u</div>
                             <div class = "img-container">
                             <img alt="qianning" src="../assets/img//members/qianning.png" class = "member"/>
                             </div>
@@ -471,7 +471,7 @@
                 <div class = "row"> -->
                     <div class = "col-4 col-sm-3">
                         <div class="dot yellow">
-                            <div class = "quote">If you're scared of being 'too optimistic' you'll become a realist - and that's no fun.</div>
+                            <div class = "quote">If you're scared of being 'too optimistic' you'll become a realist – and that's no fun.</div>
                             <div class = "img-container">
                             <img alt="shaantam" src="../assets/img//members/shaantam.png" class = "member"/>
                             </div>
@@ -491,7 +491,7 @@
                     </div>
                     <div class = "col-6 col-sm-3">
                         <div class="dot blue">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">Can you really expect me to describe myself in 15 words? I am a complex</div>
                             <div class = "img-container">
                             <img alt="tanthai" src="../assets/img//members/tanthai.png" class = "member"/>
                             </div>
