--- a/v1.5/about.html
+++ b/v1.5/about.html
@@ -62,8 +62,8 @@
 
 <div class="container">
 
-    <h1> WELCOME TO ICB</h1>
-    <h6>Find out what is important to us an organization.</h6>
+    <h1>ABOUT US</h1>
+    <h6>Find out what is important to us.</h6>
     
     <h2 id="missionmobile">Our Mission and Values</h2>
     <h4 id="inventmobile">Inventing new ways to make a better world.</h4>
@@ -77,7 +77,7 @@
         others.
     </p>
 
-    <h2 id="mission">Our Mission and Values</h2>
+    <h2 id="mission">Mission & Values</h2>
     <h4 id="invent">Inventing new ways to make a better world.</h4>
     <p id="front">
         Our mission as a multidisciplinary organization focuses on human-centered design that partners with professors,
@@ -126,7 +126,7 @@
     <!--Our ORIGIN STORY section-->
         <div class="row">
             <div class="column1">
-                <h2>Our Origin Story</h2>
+                <h2>Our Story</h2>
                 <figure>
                     <img src="../assets/img/about/aboutpic3.png" alt="aboutpic3" id="aboutpic3" />
                     <figcaption>
