coded in about page gradient to make loading faster

--- a/v1.5/about.html
+++ b/v1.5/about.html
@@ -187,7 +187,7 @@
     <script src="../assets/js/members.js"></script>
 </body>
 
-<footer style="background-color: #B3CFE3; color: black; padding: 20px; text-align: center; margin-top: 20px;">Made with ♥ by the <span> <a style="color: black" href="webdevteam.html"> Invention Corps Web Team </a> </span> <br>Copyright © 2020
+<footer style="background-color: #BBDCFF; color: black; padding: 20px; text-align: center; margin-top: 20px;">Made with ♥ by the <span> <a style="color: black" href="webdevteam.html"> Invention Corps Web Team </a> </span> <br>Copyright © 2020
 </footer>
 
 </html>
