--- a/v1.5/projects.html
+++ b/v1.5/projects.html
@@ -314,7 +314,7 @@
     </div>
 
 <!-- Footer -->
-<footer style="background-color: #B3CFE3; color: black; padding: 20px; text-align: center; margin-top: 20px;">Made with ♥ by the <span> <a style="color: black" href="webdevteam.html"> Invention Corps Web Team </a> </span> <br>Copyright © 2020
+<footer style="background-color: #CCE5FF; color: black; padding: 20px; text-align: center; margin-top: 20px;">Made with ♥ by the <span> <a style="color: black" href="webdevteam.html"> Invention Corps Web Team </a> </span> <br>Copyright © 2020
  </footer>
 
 </body>
