--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -281,7 +281,7 @@
                     </div>
                     <div class = "col-4 col-sm-3">
                         <div class="dot red">
-                            <div class = "quote">Click <a href="https://www.linkedin.com/in/irisghou/" target="_blank">here</a> for a random ideas generator.</div>
+                            <div class = "quote">Click <a href="https://www.linkedin.com/in/irisghou/" target="_blank">here</a> for a random ideas generator!</div>
                             <div class = "img-container">
                             <img alt="iris" src="../assets/img//members/iris.png" class = "member"/>
                             </div>
@@ -417,7 +417,7 @@
                     </div>
                     <div class = "col-4 col-sm-3">
                         <div class="dot green">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">Messiness & Laziness - Correlation not Causation</div>
                             <div class = "img-container">
                             <img alt="pippa" src="../assets/img//members/pippa.png" class = "member"/>
                             </div>
