projects page tweaks

--- a/v1.5/projects.html
+++ b/v1.5/projects.html
@@ -76,13 +76,13 @@
     <!-- Page Content -->
     <div class="container">
         <h1 style="text-align: center;"><strong>PROJECT GALLERY</strong></h1>
-        <h6 style="text-align: center;  font-style: italic; font-weight: .1px; padding-bottom: 5%;">View our assortment of projects over the years.</h6>
+        <h6 style="text-align: center;  font-style: italic; font-weight: .1px; padding-bottom: 4%;">View our assortment of projects over the years.</h6>
         <p style="padding-left: 6.7%;">Categories: 
             <mark style="border-radius: 10%; background-color: #CCE6FF;">DELIVERABLES</mark>
             <mark style="border-radius: 10%; background-color: #FFF6A9;">TOPIC</mark>
             <mark style="border-radius: 10%; background-color: #CCF4D5;">TOOLS USED</mark>
             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consequat nunc, enim libero varius purus, consectetur vel sem. </p> -->
-        <div class="container" style="padding-top: 7%;">
+        <div class="container" style="padding-top: 2%;">
             <div class="row">
               <div class="col-6 col-sm-4" style="text-align: center">
                 <div style="padding-bottom: 10%;">
@@ -92,10 +92,10 @@
                 <br>
                 <div class="d-flex justify-content-center">
                     <figcaption style="padding-top: 3%; width: 70%;">
-                    <mark style="border-radius: 10%; background-color: #CCE6FF;">Mobile UI Design</mark>
-                    <mark style="border-radius: 10%; background-color: #FFF6A9;">Environment</mark>
-                    <mark style="border-radius: 10%; background-color: #CCF4D5;">Figma</mark>
-                    <mark style="border-radius: 10%; background-color: #CCF4D5;">iOS Dev</mark>
+                    <mark class="project-tag" style="border-radius: 10%; background-color: #CCE6FF;">Mobile UI Design</mark>
+                    <mark class="project-tag" style="border-radius: 10%; background-color: #FFF6A9;">Environment</mark>
+                    <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">Figma</mark>
+                    <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">iOS Dev</mark>
                     </figcaption>
                 </div>
 
@@ -109,11 +109,11 @@
                     <br>
                     <div class="d-flex justify-content-center">
                         <figcaption style="padding-top: 3%; width: 70%;">
-                        <mark style="border-radius: 10%; background-color: #CCE6FF;">Mobile UI Design</mark>
-                        <mark style="border-radius: 10%; background-color: #FFF6A9;">Medical</mark>
-                        <mark style="border-radius: 10%; background-color: #CCF4D5;">Figma</mark>
-                        <mark style="border-radius: 10%; background-color: #CCF4D5;">Adobe Suite</mark>
-                        <mark style="border-radius: 10%; background-color: #CCF4D5;">TensorFlow</mark>
+                        <mark class="project-tag" style="border-radius: 10%; background-color: #CCE6FF;">Mobile UI Design</mark>
+                        <mark class="project-tag" style="border-radius: 10%; background-color: #FFF6A9;">Medical</mark>
+                        <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">Figma</mark>
+                        <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">Adobe Suite</mark>
+                        <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">TensorFlow</mark>
                         </figcaption>
                     </div>
                 </div>
@@ -126,11 +126,11 @@
                     <br>
                     <div class="d-flex justify-content-center">
                         <figcaption style="padding-top: 3%; width: 70%;">
-                        <mark style="border-radius: 10%; background-color: #CCE6FF;">Branding</mark>
-                        <mark style="border-radius: 10%; background-color: #CCE6FF;">Graphic Design</mark>
+                        <mark class="project-tag" style="border-radius: 10%; background-color: #CCE6FF;">Branding</mark>
+                        <mark class="project-tag" style="border-radius: 10%; background-color: #CCE6FF;">Graphic Design</mark>
                         <br>
-                        <mark style="border-radius: 10%; background-color: #FFF6A9;">Social Issues</mark>
-                        <mark style="border-radius: 10%; background-color: #CCF4D5;">User Testing</mark>
+                        <mark class="project-tag" style="border-radius: 10%; background-color: #FFF6A9;">Social Issues</mark>
+                        <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">User Testing</mark>
                         </figcaption>
                     </div>
                 </div>
@@ -144,11 +144,11 @@
                         <br>
                         <div class="d-flex justify-content-center">
                             <figcaption style="padding-top: 3%; width: 70%;">
-                            <mark style="border-radius: 10%; background-color: #CCE6FF;">Educational Report</mark>
-                            <mark style="border-radius: 10%; background-color: #CCE6FF;">Graphic Design</mark>
-                            <mark style="border-radius: 10%; background-color: #FFF6A9;">Accessibility</mark>
-                            <mark style="border-radius: 10%; background-color: #CCF4D5;">Figma</mark>
-                            <mark style="border-radius: 10%; background-color: #CCF4D5;">UX Research</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCE6FF;">Educational Report</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCE6FF;">Graphic Design</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #FFF6A9;">Accessibility</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">Figma</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">UX Research</mark>
                             </figcaption>
                         </div>
                     </div>
@@ -161,11 +161,11 @@
                         <br>
                         <div class="d-flex justify-content-center">
                             <figcaption style="padding-top: 3%; width: 70%;">
-                            <mark style="border-radius: 10%; background-color: #CCE6FF;">Web UI Design</mark>
-                            <mark style="border-radius: 10%; background-color: #CCE6FF;">Business Model</mark>
-                            <mark style="border-radius: 10%; background-color: #FFF6A9;">Accessibility</mark>
-                            <mark style="border-radius: 10%; background-color: #CCF4D5;">UX Research</mark>
-                            <mark style="border-radius: 10%; background-color: #CCF4D5;">Figma</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCE6FF;">Web UI Design</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCE6FF;">Business Model</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #FFF6A9;">Accessibility</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">UX Research</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">Figma</mark>
                             </figcaption>
                         </div>
                     </div>
@@ -178,10 +178,10 @@
                         <br>
                         <div class="d-flex justify-content-center">
                             <figcaption style="padding-top: 3%; width: 70%;">
-                            <mark style="border-radius: 10%; background-color: #CCE6FF;">Business Model</mark>
-                            <mark style="border-radius: 10%; background-color: #CCE6FF;">Findings Report</mark>
-                            <mark style="border-radius: 10%; background-color: #FFF6A9;">Social Issues</mark>
-                            <mark style="border-radius: 10%; background-color: #CCF4D5;">UX Research</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCE6FF;">Business Model</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCE6FF;">Findings Report</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #FFF6A9;">Social Issues</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">UX Research</mark>
                             </figcaption>
                         </div>
                     </div>
@@ -195,13 +195,13 @@
                         <br>
                         <div class="d-flex justify-content-center">
                             <figcaption style="padding-top: 3%; width: 70%;">
-                            <mark style="border-radius: 10%; background-color: #CCE6FF;">Physical Prototype</mark>
-                            <mark style="border-radius: 10%; background-color: #CCE6FF;">Business Model</mark>
-                            <mark style="border-radius: 10%; background-color: #CCE6FF;">Mobile UI Design</mark>
-                            <mark style="border-radius: 10%; background-color: #FFF6A9;">Social Issues</mark>
-                            <mark style="border-radius: 10%; background-color: #FFF6A9;">Public Health</mark>
-                            <mark style="border-radius: 10%; background-color: #CCF4D5;">CAD</mark>
-                            <mark style="border-radius: 10%; background-color: #CCF4D5;">Figma</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCE6FF;">Physical Prototype</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCE6FF;">Business Model</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCE6FF;">Mobile UI Design</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #FFF6A9;">Social Issues</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #FFF6A9;">Public Health</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">CAD</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">Figma</mark>
                             </figcaption>
                         </div>
                     </div>
@@ -214,13 +214,13 @@
                         <br>
                         <div class="d-flex justify-content-center">
                             <figcaption style="padding-top: 3%; width: 70%;">
-                            <mark style="border-radius: 10%; background-color: #CCE6FF;">Manufacturing</mark>
-                            <mark style="border-radius: 10%; background-color: #CCE6FF;">Physical Prototype</mark>
-                            <mark style="border-radius: 10%; background-color: #FFF6A9;">Education</mark>
-                            <mark style="border-radius: 10%; background-color: #FFF6A9;">Public Health</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCE6FF;">Manufacturing</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCE6FF;">Physical Prototype</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #FFF6A9;">Education</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #FFF6A9;">Public Health</mark>
                             <br>
-                            <mark style="border-radius: 10%; background-color: #CCF4D5;">Laser Cutting</mark>
-                            <mark style="border-radius: 10%; background-color: #CCF4D5;">Arduino</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">Laser Cutting</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">Arduino</mark>
                             </figcaption>
                         </div>
                     </div>
@@ -233,14 +233,14 @@
                         <br>
                         <div class="d-flex justify-content-center">
                             <figcaption style="padding-top: 3%; width: 70%;">
-                            <mark style="border-radius: 10%; background-color: #CCE6FF;">Qualitative Research</mark>
-                            <mark style="border-radius: 10%; background-color: #CCE6FF;">Media</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCE6FF;">Qualitative Research</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCE6FF;">Media</mark>
                             <br>
-                            <mark style="border-radius: 10%; background-color: #CCE6FF;">Web Application</mark>
-                            <mark style="border-radius: 10%; background-color: #FFF6A9;">Art</mark>
-                            <mark style="border-radius: 10%; background-color: #FFF6A9;">Accessbility</mark>
-                            <mark style="border-radius: 10%; background-color: #CCF4D5;">Figma</mark>
-                            <mark style="border-radius: 10%; background-color: #CCF4D5;">Heroku</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCE6FF;">Web Application</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #FFF6A9;">Art</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #FFF6A9;">Accessbility</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">Figma</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">Heroku</mark>
                             </figcaption>
                         </div>
                     </div>
@@ -254,10 +254,10 @@
                         <br>
                         <div class="d-flex justify-content-center">
                             <figcaption style="padding-top: 3%; width: 70%;">
-                            <mark style="border-radius: 10%; background-color: #CCE6FF;">Physical Prototype</mark>
-                            <mark style="border-radius: 10%; background-color: #FFF6A9;">Environment</mark>
-                            <mark style="border-radius: 10%; background-color: #CCF4D5;">Rapid Prototyping</mark>
-                            <mark style="border-radius: 10%; background-color: #CCF4D5;">3D Printing</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCE6FF;">Physical Prototype</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #FFF6A9;">Environment</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">Rapid Prototyping</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">3D Printing</mark>
                             </figcaption>
                         </div>
                     </div>
@@ -270,10 +270,10 @@
                         <br>
                         <div class="d-flex justify-content-center">
                             <figcaption style="padding-top: 3%; width: 70%;">
-                            <mark style="border-radius: 10%; background-color: #CCE6FF;">Mobile UI Design</mark>
-                            <mark style="border-radius: 10%; background-color: #FFF6A9;">Accessibility</mark>
-                            <mark style="border-radius: 10%; background-color: #CCF4D5;">Figma</mark>
-                            <mark style="border-radius: 10%; background-color: #CCF4D5;">UX Research</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCE6FF;">Mobile UI Design</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #FFF6A9;">Accessibility</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">Figma</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">UX Research</mark>
                             </figcaption>
                         </div>
                     </div>
@@ -286,11 +286,11 @@
                         <br>
                         <div class="d-flex justify-content-center">
                             <figcaption style="padding-top: 3%; width: 70%;">
-                            <mark style="border-radius: 10%; background-color: #CCE6FF;">Physical Prototype</mark>
-                            <mark style="border-radius: 10%; background-color: #FFF6A9;">Medical</mark>
-                            <mark style="border-radius: 10%; background-color: #CCF4D5;">CAD</mark>
-                            <mark style="border-radius: 10%; background-color: #CCF4D5;">User Testing</mark>
-                            <mark style="border-radius: 10%; background-color: #CCF4D5;">Patent Law</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCE6FF;">Physical Prototype</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #FFF6A9;">Medical</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">CAD</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">User Testing</mark>
+                            <mark class="project-tag" style="border-radius: 10%; background-color: #CCF4D5;">Patent Law</mark>
                             </figcaption>
                         </div>
                     </div>
