standardizing page titles and adding a quote to members

--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -177,7 +177,7 @@
                 <div class = "row">
                     <div class = "col-4 col-sm-3">
                         <div class="dot red">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">"Being wrong is a natural part of being. But to not change is to be wrong."</div>
                             <div class = "img-container">
                             <img alt="abhinav" src="../assets/img//members/abhi.png" class = "member"/>
                             </div>
