--- a/v1.5/projects.html
+++ b/v1.5/projects.html
@@ -75,7 +75,7 @@
     
     <!-- Page Content -->
     <div class="container">
-        <h1 style="text-align: center;"><strong>PROJECT GALLERY</strong></h1>
+        <h1 style="text-align: center;">PROJECT GALLERY</h1>
         <h6 style="text-align: center;  font-style: italic; font-weight: .1px; padding-bottom: 4%;">View our assortment of projects over the years.</h6>
         <p style="padding-left: 6.7%;">Categories: 
             <mark style="border-radius: 10%; background-color: #CCE6FF;">DELIVERABLES</mark>
