--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -247,23 +247,23 @@
                         <div id=underline4></div>
                     </div>
                     <row>
-                    <div class="col-4"> <img src="../assets/img/number-1.svg" class="bubbles1"> </div>
+                    <div class="col-4"> <img src="../assets/img/number-1.svg" class="nums"> </div>
                     <div class="col-8"> <h7 id="how">Houses that are functional and environmentally adaptable, while still feeling like homes.</h7></div>
                     </row>
                     <row>
-                        <div class="col-4"> <img src="../assets/img/number-2.svg" class="bubbles1"> </div>
+                        <div class="col-4"> <img src="../assets/img/number-2.svg" class="nums"> </div>
                         <div class="col-8"> <h7 id="how">A cohesive community that contains shared public spaces where residents can interact with each other.</h7></div>
                     </row>
                     <row>
-                        <div class="col-4"> <img src="../assets/img/number-3.svg" class="bubbles1"> </div>
+                        <div class="col-4"> <img src="../assets/img/number-3.svg" class="nums"> </div>
                         <div class="col-8"> <h7 id="how">A thoughtful design for community block that is safe, secure, and adaptable to rising sea levels.</h7></div>
                     </row>
 
-                    <!-- <h7 id="how"><span><img src="../assets/img/number-1.svg" class="bubbles1"></span>Houses that are functional and
+                    <!-- <h7 id="how"><span><img src="../assets/img/number-1.svg" class="nums"></span>Houses that are functional and
                         environmentally adaptable, while still feeling like homes.</h7>
-                    <h7 id="how"><span><img src="../assets/img/number-2.svg" class="bubbles1"></span>A cohesive community that
+                    <h7 id="how"><span><img src="../assets/img/number-2.svg" class="nums"></span>A cohesive community that
                         contains shared public spaces where residents can interact with each other.</h7>
-                    <h7 id="how"><span><img src="../assets/img/number-3.svg" class="bubbles1"></span>A thoughtful design for a
+                    <h7 id="how"><span><img src="../assets/img/number-3.svg" class="nums"></span>A thoughtful design for a
                         community block that is safe, secure, and adaptable to rising sea levels.</h7> -->
                 </div>
             </div>
@@ -280,10 +280,10 @@
             <div class="col-12 col-sm-6">
                 <div class="container">
                     <div class="sectionheader">
-                        <h3>Residence Designs<span><img src="../assets/img/floatingblocks15/initials-1.svg" class="bubbles1"></span></h3>
+                        <h3>Residence Designs<span><img src="../assets/img/floatingblocks15/initials-1.svg" class="bubbles"></span></h3>
                         <div id=underline5></div>
                     </div>
-                    <h7 id="how"><span><img src="../assets/img/number-1.svg" class="bubbles1"></span>How might we create a sustainable structure for individual homes that are adaptable to rising sea levels?
+                    <h7 id="how"><span><img src="../assets/img/number-1.svg" class="nums"></span>How might we create a sustainable structure for individual homes that are adaptable to rising sea levels?
                     </h7>
                     <div class="container">
                         <p class="p1">We began by researching existing floating communities to determine the architectural requirements of a floating
@@ -306,10 +306,10 @@
             </div>
             <div class="col-12 col-sm-6">
                 <div class="sectionheader">
-                    <h3>Community Layout<span><img src="../assets/img/floatingblocks15/initials-2.svg" class="bubbles1"></span></h3>
+                    <h3>Community Layout<span><img src="../assets/img/floatingblocks15/initials-2.svg" class="bubbles"></span></h3>
                     <div id=underline6></div>
                 </div>
-                <h7 id="how"><span><img src="../assets/img/number-2.svg" class="bubbles1"></span>How might we make a group of floating homes feel like a community, to maintain an interactive public environment while
+                <h7 id="how"><span><img src="../assets/img/number-2.svg" class="nums"></span>How might we make a group of floating homes feel like a community, to maintain an interactive public environment while
                 being environmentally conscious?</h7>
                 <div class="container">
                     <p id="p4">Our goal was to create a housing layout that reflected a community rather than just individual homes. We tested various
@@ -328,10 +328,10 @@
             <div class="col-12 col-sm-6">
                 <div class="container">
                     <div class="sectionheader">
-                        <h3>3D Model Fabrication<span><img src="../assets/img/floatingblocks15/initials-3.svg" class="bubbles1"></span></h3>
+                        <h3>3D Model Fabrication<span><img src="../assets/img/floatingblocks15/initials-3.svg" class="bubbles"></span></h3>
                         <div id=underline7></div>
                     </div>
-                    <h7 id="how"><span><img src="../assets/img/number-3.svg" class="bubbles1"></span>How might we develop a three-dimensional model of a floating urban block that is long-lasting and functions to
+                    <h7 id="how"><span><img src="../assets/img/number-3.svg" class="nums"></span>How might we develop a three-dimensional model of a floating urban block that is long-lasting and functions to
                     communicate our community designs?</h7>
                     <div class="container">
                         <p class="p2">After deciding on the layout for the houses, we created a model for the entire system. Our purpose was to create a
