some live share bits

--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -128,7 +128,7 @@
                             <img alt="regina" src="../assets/img/floatingblocks15/regina.svg" class = "member"/>
                         </div>
                         </a>
-                        <h6>Regina Madanguit</h6>
+                        <h7>Regina Madanguit</h7>
                         </a>
                         <p>Project Lead</p>
                     </div>
@@ -139,7 +139,7 @@
                             <img alt="aryan" src="../assets/img/floatingblocks15/aryan.svg" class = "member"/>
                         </div>
                         </a>
-                        <h6>Aryan Nair</h6>
+                        <h7>Aryan Nair</h7>
                         </a>
                         <p>Material Analysis</p>
                     </div>
@@ -150,7 +150,7 @@
                             <img alt="joey" src="../assets/img/floatingblocks15/joey.svg" class = "member"/>
                         </div>
                         </a>
-                        <h6>Joey Besgen</h6>
+                        <h7>Joey Besgen</h7>
                         </a>
                         <p>Material Analysis</p>
                     </div>
@@ -161,7 +161,7 @@
                             <img alt="jamesz" src="../assets/img/floatingblocks15/jamesz.svg" class = "member"/>
                         </div>
                         </a>
-                        <h6>James Zamora</h6>
+                        <h7>James Zamora</h7>
                         </a>
                         <p>User Research</p>
                     </div>
@@ -172,7 +172,7 @@
                             <img alt="ariel" src="../assets/img/floatingblocks15/ariel.svg" class = "member"/>
                         </div>
                         </a>
-                        <h6>Ariel Chen</h6>
+                        <h7>Ariel Chen</h7>
                         </a>
                         <p>User Research</p>
                     </div>
@@ -184,23 +184,23 @@
         <div class="container">
             <div class = "row">
                 <div class = "col-4 col-sm-3 col-md-2">
-                    <div class="blob">
+                    <div class="blob justify-content-center">
                         <div class = "img-container">
                             <img alt="kristina" src="../assets/img/floatingblocks15/kristina.svg" class = "member"/>
                         </div>
                         </a>
-                        <h6>Kristina Hill</h6>
+                        <h7>Kristina Hill</h7>
                         </a>
                         <p>Professor, Landscape Architecture</p>
                     </div>   
                 </div>
                 <div class = "col-4 col-sm-3 col-md-2">
-                    <div class="blob">
+                    <div class="blob justify-content-center">
                         <div class = "img-container">
                             <img alt="nate" src="../assets/img/floatingblocks15/nate.svg" class = "member"/>
                         </div>
                         </a>
-                        <h6>Nate Kauffman</h6>
+                        <h7>Nate Kauffman</h7>
                         </a>
                         <p>PhD Candidate, Landscape Architecture</p>
                     </div>   
@@ -257,6 +257,8 @@
                     </row>
                     <row>
                         <div class="col-4"> <img src="../assets/img/number-3.svg" class="nums"> </div>
+                        <div class="col-8"> <h7 id="how">A thoughtful design for community block that is safe, secure, and adaptable to rising sea levels.</h7></div>
+                        <div class="col-8"> <h7 id="how">A thoughtful design for community block that is safe, secure, and adaptable to rising sea levels.</h7></div>
                         <div class="col-8"> <h7 id="how">A thoughtful design for community block that is safe, secure, and adaptable to rising sea levels.</h7></div>
                     </row>
 
