--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -66,53 +66,54 @@
     </nav>
 
     <!-- That Cool Top Bar with the image and the info introducing the project -->
-    <div class="topbar">
+    <div class="topbar"d-flex justify-content-center>
         <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-6 d-flex justify-content-center">
                     <img src="../assets/img/floatingblocks15/floating-landing.svg" class="topbar-img">
                 </div>
                 <div class="col-12 col-sm-6">
+                    <div class="holder">
                     <h1 id="proj-title">floating urban blocks</h1>
                     <h5>modeling communities that adapt to rising sea levels.</h5>
                     <br>
                     <hr id="topbar-hr">
-                    <div class="holder">
-                    <div class="row details">
-                        <div class="col-4">
-                            <h4 id="proj-details">Duration</h4>
+                        <div class="row details">
+                            <div class="col-4">
+                                <h4 id="proj-details">Duration</h4>
+                            </div>
+                            <div class="col-8">
+                                <h6 id="proj-answers">Sept 2017 - Dec 2017</h6>
+                            </div>
                         </div>
-                        <div class="col-8">
-                            <h6 id="proj-answers">Sept 2017 - Dec 2017</h6>
+                        <div class="row details">
+                            <div class="col-4">
+                                <h4 id="proj-details">Focus</h4>
+                            </div>
+                            <div class="col-8">
+                                <h6 id="proj-answers">Environmental Issues</h6>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row details">
-                        <div class="col-4">
-                            <h4 id="proj-details">Focus</h4>
+                        <div class="row details">
+                            <div class="col-4">
+                                <h4 id="proj-details">Tools</h4>
+                            </div>
+                            <div class="col-8">
+                                <h6 id="proj-answers">Rapid Prototyping, CAD</h6>
+                            </div>
                         </div>
-                        <div class="col-8">
-                            <h6 id="proj-answers">Environmental Issues</h6>
+                        <div class="row details">
+                            <div class="col-4">
+                                <h4 id="proj-details">Partner</h4>
+                            </div>
+                            <div class="col-8">
+                                <h6 id="proj-answers">Kristina Hill, Nate Kauffman</h6>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row details">
-                        <div class="col-4">
-                            <h4 id="proj-details">Tools</h4>
-                        </div>
-                        <div class="col-8">
-                            <h6 id="proj-answers">Rapid Prototyping, CAD</h6>
-                        </div>
-                    </div>
-                    <div class="row details">
-                        <div class="col-4">
-                            <h4 id="proj-details">Partner</h4>
-                        </div>
-                        <div class="col-8">
-                            <h6 id="proj-answers">Kristina Hill, Nate Kauffman</h6>
-                        </div>
-                    </div>
-                    </div>
+                   
                     <hr id="topbar-hr">
                 </div>
+            </div>
             </div>
         </div> 
     </div>
@@ -257,6 +258,7 @@
                     </row>
                     <row>
                         <div class="col-4"> <img src="../assets/img/number-3.svg" class="nums"> </div>
+                        <div class="col-8"> <h7 id="how">A thoughtful design for community block that is safe, secure, and adaptable to rising sea levels.</h7></div>
                         <div class="col-8"> <h7 id="how">A thoughtful design for community block that is safe, secure, and adaptable to rising sea levels.</h7></div>
                         <div class="col-8"> <h7 id="how">A thoughtful design for community block that is safe, secure, and adaptable to rising sea levels.</h7></div>
                         <div class="col-8"> <h7 id="how">A thoughtful design for community block that is safe, secure, and adaptable to rising sea levels.</h7></div>
