finished team section formatting

--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -181,7 +181,7 @@
             </div>
         </div>
 
-        <h2>Mentors</h2>
+        <h2 class=mentors-header>Mentors</h2>
         <div class="container">
             <div class = "row">
                 <div class = "col-4 col-sm-3 col-md-2">
