centered the title

--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -68,7 +68,7 @@
     <!-- That Cool Top Bar with the image and the info introducing the project -->
     <div class="topbar"d-flex justify-content-center>
         <div class="container">
-            <div class="row">
+            <div class="cool-row">
                 <div class="col-12 col-sm-6 d-flex justify-content-center">
                     <img src="../assets/img/floatingblocks15/floating-landing.svg" class="topbar-img">
                 </div>
@@ -78,7 +78,7 @@
                     <h5>modeling communities that adapt to rising sea levels.</h5>
                     <br>
                     <hr id="topbar-hr">
-                        <div class="row details">
+                        <div class="row-details">
                             <div class="col-4">
                                 <h4 id="proj-details">Duration</h4>
                             </div>
@@ -86,7 +86,7 @@
                                 <h6 id="proj-answers">Sept 2017 - Dec 2017</h6>
                             </div>
                         </div>
-                        <div class="row details">
+                        <div class="row-details">
                             <div class="col-4">
                                 <h4 id="proj-details">Focus</h4>
                             </div>
@@ -94,7 +94,7 @@
                                 <h6 id="proj-answers">Environmental Issues</h6>
                             </div>
                         </div>
-                        <div class="row details">
+                        <div class="row-details">
                             <div class="col-4">
                                 <h4 id="proj-details">Tools</h4>
                             </div>
@@ -102,7 +102,7 @@
                                 <h6 id="proj-answers">Rapid Prototyping, CAD</h6>
                             </div>
                         </div>
-                        <div class="row details">
+                        <div class="row-details">
                             <div class="col-4">
                                 <h4 id="proj-details">Partner</h4>
                             </div>
