--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -279,11 +279,11 @@
                         <div class="col-11 hmw"> <h7 id="how">How might we create a sustainable structure for individual homes that are adaptable to rising sea levels?</h7></div>
                     </div>
                     <div class="container">
-                        <p class="p1">We began by researching existing floating communities to determine the architectural requirements of a floating
+                        <p class="p1 left">We began by researching existing floating communities to determine the architectural requirements of a floating
                             residential structure, taking inspiration from similar structures in Ijburg, Netherlands. Combining that inspiration
                             with our own ideas for a functional and comfortable home layout, we sketched designs for two-story homes.
                         </p>
-                        <p class="p3">After visualizing a two-dimensional unfolded layout, we created initial prototypes out of cardboard and aluminum foil.
+                        <p class="p3 left">After visualizing a two-dimensional unfolded layout, we created initial prototypes out of cardboard and aluminum foil.
                             Once we tested the efficacy of our 3D designs, we created a higher-fidelity prototype by laser cutting each individual
                             home design from plywood. These structures served as our models for houses.</p>
                     </div>
@@ -310,13 +310,13 @@
                 <!-- <h7 id="how"><span><img src="../assets/img/number-2.svg" class="nums"></span>How might we make a group of floating homes feel like a community, to maintain an interactive public environment while
                 being environmentally conscious?</h7> -->
                 <div class="container">
-                    <p class="p4">Our goal was to create a housing layout that reflected a community rather than just individual homes. We tested various
+                    <p class="p4 right">Our goal was to create a housing layout that reflected a community rather than just individual homes. We tested various
                     configurations of the laser-cut structures we had created to determine the best possible community arrangement.
                     <br>
                     <br>
                     For each layout, we gathered user feedback from Bay Area residents about its potential liveability to gain more insight
                     into how individuals might interact within each community design.</p>
-                    <p class="p5">Based on our feedback analysis, we ultimately chose a layout with houses arranged around the edges of the block, with a
+                    <p class="p5 right">Based on our feedback analysis, we ultimately chose a layout with houses arranged around the edges of the block, with a
                     common area in the center of the arrangement. This formation allows for a more protected and cohesive community feel,
                     with space for a public area such as a community center or park.</p>
                 </div>
@@ -335,7 +335,7 @@
                             communicate our community designs?</h7></div>
                     </div>
                     <div class="container">
-                        <p class="p2">After deciding on the layout for the houses, we created a model for the entire system. Our purpose was to create a
+                        <p class="p2 left">After deciding on the layout for the houses, we created a model for the entire system. Our purpose was to create a
                         higher-fidelity model of what the community would look like and how it would interact with a live body of water.
                         <br>
                         <br>
@@ -344,7 +344,7 @@
                         so that the floating ability of the block could be tested with a secluded body of water that can persist without
                         eutrophication.</p>
 
-                        <p class="p3">For this model, we decided to create a version in which the houses themselves do not float separately, but rather sit on
+                        <p class="p3 left">For this model, we decided to create a version in which the houses themselves do not float separately, but rather sit on
                         a block that supports the whole community. This allows for the block configurations to be easily rearranged as more
                         research and usability testing is conducted.
                         </p>
